add the create route and modify schema a bit
